[gd_scene load_steps=23 format=2]

[ext_resource path="res://Fonts/Font.ttf" type="FontFile" id=1]
[ext_resource path="res://Player/Ships/Starter/Top/0.png" type="Texture2D" id=2]
[ext_resource path="res://Textures/UI/Start/1.png" type="Texture2D" id=3]
[ext_resource path="res://Textures/UI/Start/0.png" type="Texture2D" id=4]
[ext_resource path="res://Textures/UI/Start/2.png" type="Texture2D" id=5]
[ext_resource path="res://Textures/UI/New/0.png" type="Texture2D" id=6]
[ext_resource path="res://Textures/UI/New/1.png" type="Texture2D" id=7]
[ext_resource path="res://Textures/UI/New/2.png" type="Texture2D" id=8]
[ext_resource path="res://Start.gd" type="Script" id=9]
[ext_resource path="res://Textures/Icons/OrbisMini.png" type="Texture2D" id=13]
[ext_resource path="res://Textures/Icons/PalosMini.png" type="Texture2D" id=14]
[ext_resource path="res://Textures/Icons/ArmeniaMini.png" type="Texture2D" id=15]
[ext_resource path="res://Textures/Icons/Empty.png" type="Texture2D" id=16]
[ext_resource path="res://Textures/Icons/YouTube/2.png" type="Texture2D" id=17]
[ext_resource path="res://Textures/Icons/YouTube/1.png" type="Texture2D" id=18]
[ext_resource path="res://Textures/Icons/YouTube/0.png" type="Texture2D" id=19]
[ext_resource path="res://Textures/Backgrounds/ParralaxBackground.jpg" type="Texture2D" id=20]

[sub_resource type="FontFile" id=1]
size = 64
outline_size = 4
outline_color = Color( 1, 1, 1, 0.215686 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "fly"
length = 15.0
loop = true
step = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PackedFloat32Array( 688.114, -0.25, 0, 0.25, 0, 688.114, -0.25, 0, 0.25, 0, 688.114, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 6, 15 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PackedFloat32Array( 186.581, -0.25, 0, 0.25, 0, 54.4323, -0.25, 0, 0.25, 0, 186.581, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 6, 15 )
}

[sub_resource type="FontFile" id=3]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=5]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 0.529412 )
font_data = ExtResource( 1 )

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="CanvasLayer" parent="."]
layer = 0

[node name="Color" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Background"]
modulate = Color( 0.988235, 0.811765, 0.00784314, 0.286275 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 20 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = -480.0
custom_minimum_size = Vector2( 0, 120 )
custom_fonts/font = SubResource( 1 )
text = "Scroosher"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Orbis" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 874.611
offset_top = 137.132
offset_right = -49.3887
offset_bottom = -362.868
custom_minimum_size = Vector2( 100, 100 )
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Palos" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 644.611
offset_top = 205.132
offset_right = -279.389
offset_bottom = -294.868
custom_minimum_size = Vector2( 100, 100 )
texture = ExtResource( 14 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armenia" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 827.611
offset_top = 421.132
offset_right = -96.3887
offset_bottom = -78.868
custom_minimum_size = Vector2( 100, 100 )
texture = ExtResource( 15 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 688.114
offset_top = 142.489
offset_right = -18.8865
offset_bottom = -112.511
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Logo"]
anims/fly = SubResource( 2 )

[node name="Start" type="TextureButton" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 158.0
offset_right = -638.0
offset_bottom = -307.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planet" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 410.0
offset_top = 158.0
offset_right = -494.0
offset_bottom = -307.0
custom_minimum_size = Vector2( 120, 135 )
texture = ExtResource( 16 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouTube" type="TextureButton" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 409.0
offset_top = 320.0
offset_right = -495.0
offset_bottom = -145.0
custom_minimum_size = Vector2( 120, 135 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="TextureButton" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 321.0
offset_right = -636.0
offset_bottom = -143.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 547.0
offset_right = -8.0
offset_bottom = -10.0
custom_fonts/font = SubResource( 3 )
text = "Developed by TakeLime Games
Scroosher is Open-Source and free Software. No limitations or rules to follow."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 887.0
offset_bottom = -543.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.584314, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.270588, 0.270588, 1 )
focus_mode = 0
text = "Close"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisableAudio" type="Button" parent="UI"]
anchor_right = 0.992
anchor_bottom = 1.0
offset_right = -856.808
offset_bottom = -537.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.584314, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.176471, 0.176471, 1 )
toggle_mode = true
focus_mode = 0
text = "Audio"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="UI/YouTube" to="." method="_on_YouTube_pressed"]
[connection signal="pressed" from="UI/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="UI/Close" to="." method="_on_Close_pressed"]
[connection signal="toggled" from="UI/DisableAudio" to="." method="_on_DisableAudio_toggled"]
